--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+*/.svn/*
+**/.svn/*
+**/bin/*
+/.svn/
 target/
+.DS_Store
+.settings/
+*.iml
+*.ipr
+*.iws
+keystore
+/.idea/
+/.idea/*
+.idea/
+.idea/*
+test_out/
+.directory
+*~
