--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   </properties>
   
   <modules>
-        <module>../rtcharts-swing</module>
+        <module>rtcharts-swing</module>
   </modules>
   
       <build>
@@ -27,7 +27,7 @@
                 <version>1.9.0</version>
                 <configuration>
                     <basedir>${basedir}</basedir>
-                    <header>${basedir}/../HEADER</header>
+                    <header>${basedir}/HEADER</header>
                     <strictCheck>true</strictCheck>
                     <properties>
                         <owner>SINTEF</owner>
