--- a/rtcharts-swing/pom.xml
+++ b/rtcharts-swing/pom.xml
@@ -11,7 +11,7 @@
         <groupId>org.thingml</groupId>
         <artifactId>rtcharts</artifactId>
         <version>0.9.0-SNAPSHOT</version>
-        <relativePath>../rtcharts/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
   <dependencies>
