[maven-release-plugin] prepare release rtcharts-1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.thingml</groupId>
   <artifactId>rtcharts</artifactId>
@@ -7,7 +6,7 @@
   <name>RTCharts :: Root</name>
   <url>https://github.com/SINTEF-9012/rtcharts</url>
   
-  <version>0.9.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   
   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -131,6 +130,7 @@
 	<connection>scm:git:git@github.com:SINTEF-9012/rtcharts.git</connection>
 	<url>scm:git:git@github.com:SINTEF-9012/rtcharts.git</url>
 	<developerConnection>scm:git:git@github.com:SINTEF-9012/rtcharts.git</developerConnection>
-     </scm>
+       <tag>rtcharts-1.0.0</tag>
+  </scm>
   
 </project>
