--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <name>RTCharts :: Root</name>
   <url>https://github.com/SINTEF-9012/rtcharts</url>
   
-  <version>1.0.0</version>
+  <version>1.1.0-SNAPSHOT</version>
   
   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -130,7 +130,7 @@
 	<connection>scm:git:git@github.com:SINTEF-9012/rtcharts.git</connection>
 	<url>scm:git:git@github.com:SINTEF-9012/rtcharts.git</url>
 	<developerConnection>scm:git:git@github.com:SINTEF-9012/rtcharts.git</developerConnection>
-       <tag>rtcharts-1.0.0</tag>
+       <tag>HEAD</tag>
   </scm>
   
 </project>
