--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <rtcharts.version>${project.version}</rtcharts.version>
         <bundle.vendor>SINTEF</bundle.vendor>
+	<headerdir>${basedir}</headerdir>
   </properties>
   
   <modules>
@@ -26,7 +27,7 @@
                 <version>1.9.0</version>
                 <configuration>
                     <basedir>${basedir}</basedir>
-                    <header>${basedir}/HEADER</header>
+                    <header>${headerdir}/HEADER</header>
                     <strictCheck>true</strictCheck>
                     <properties>
                         <owner>SINTEF</owner>
