--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   
   <organization>
     <name>SINTEF</name>
-    <url>http://www.thingml.org</url>
+    <url>http://www.sintef.no</url>
   </organization>
 
   <licenses>
