--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     </license>
   </licenses>
   
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.2.0</version>
   
   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -151,7 +151,7 @@
 	<connection>scm:git:git@github.com:SINTEF-9012/rtcharts.git</connection>
 	<url>scm:git:git@github.com:SINTEF-9012/rtcharts.git</url>
 	<developerConnection>scm:git:git@github.com:SINTEF-9012/rtcharts.git</developerConnection>
-       <tag>HEAD</tag>
+       <tag>rtcharts-1.2.0</tag>
   </scm>
   
 </project>
