--- a/rtcharts-swing/pom.xml
+++ b/rtcharts-swing/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.thingml</groupId>
         <artifactId>rtcharts</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.2.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
