--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,30 @@
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
+            <!-- Resources plugin : allow to collect version information from build process -->
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.6</version>
+				<executions>
+					<execution>
+						<id>copy-version_info</id>
+						<!-- here the phase you need -->
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.outputDirectory}/${artifactId}.version</outputDirectory>
+							<resources>          
+								<resource>
+									<directory>src/main/version_info</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>              
+						</configuration>            
+					</execution>
+				</executions>
+			</plugin>
 	    
 	    <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
