Added property: my.build.date

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <rtcharts.version>${project.version}</rtcharts.version>
         <bundle.vendor>SINTEF</bundle.vendor>
-  </properties>
+        <maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
+        <my.build.date>${maven.build.timestamp}</my.build.date>
+</properties>
   
   <modules>
         <module>rtcharts-swing</module>
